Fix izitoast text scrollbar showing for one line

--- a/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/components/messages.scss
+++ b/boilerplate/public_html/themes/custom/{{ NAME }}/src/sass/components/messages.scss
@@ -16,10 +16,14 @@
   }
 }
 
+.iziToast-texts[class][class] {
+  margin: 0;
+}
+
 .iziToast-message[class][class] {
   @include font-size(16);
-  max-height: 20vh;
-  max-width: 60vw;
+  margin: 0;
+  padding: 10px 0;
   overflow: auto;
   color: #000;
 
